# docs/swagger.json
@@ -66,6 +66,17 @@
         },
         "/api/logout": {
             "post": {
+                "description": "Logout a new user account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Logout a new user",
                 "responses": {
                     "201": {
                         "description": "Created",
@@ -90,6 +101,17 @@
         },
         "/api/profile": {
             "get": {
+                "description": "Profile a new user account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Profile a new user",
                 "responses": {
                     "201": {
                         "description": "Created",
@@ -160,6 +182,28 @@
         },
         "/api/tiers/upgrade": {
             "post": {
+                "description": "TierUpgrade a new user account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "TierUpgrade a new user",
+                "parameters": [
+                    {
+                        "description": "Registration details",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth_handlers.TierUpgrade"
+                        }
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "Created",
@@ -352,6 +396,17 @@
                     "Wallet"
                 ],
                 "summary": "Deposit to wallet",
+                "parameters": [
+                    {
+                        "description": "TransactionRequest details",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/wallet_handlers.TransactionRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -398,6 +453,17 @@
                     "Wallet"
                 ],
                 "summary": "payybill from wallet",
+                "parameters": [
+                    {
+                        "description": "PayBillRequest details",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/wallet_handlers.PayBillRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -495,6 +561,17 @@
                     "Wallet"
                 ],
                 "summary": "Withdraw from wallet",
+                "parameters": [
+                    {
+                        "description": "TransactionRequest details",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/wallet_handlers.TransactionRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -611,6 +688,18 @@
                 "password": {
                     "type": "string",
                     "minLength": 3
+                }
+            }
+        },
+        "auth_handlers.TierUpgrade": {
+            "description": "Tier upgrade request payload",
+            "type": "object",
+            "required": [
+                "tier"
+            ],
+            "properties": {
+                "tier": {
+                    "type": "string"
                 }
             }
         },
@@ -754,6 +843,32 @@
             "properties": {
                 "transactionID": {
                     "type": "integer"
+                }
+            }
+        },
+        "wallet_handlers.PayBillRequest": {
+            "type": "object",
+            "required": [
+                "amount",
+                "payee_id"
+            ],
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "payee_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "wallet_handlers.TransactionRequest": {
+            "type": "object",
+            "required": [
+                "amount"
+            ],
+            "properties": {
+                "amount": {
+                    "type": "number"
                 }
             }
         }
